force-app/main/default/objects/UserAccount__c/UserAccount__c.object-meta.xml
<CustomObject>
    <label>User Account</label>
    <pluralLabel>User Accounts</pluralLabel>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Custom non-SFDC user account for daily tracker app</description>
</CustomObject>