force-app/main/default/objects/UserAccount__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password (Hashed)</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>