force-app/main/default/objects/UserAccount__c/fields/Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Security_Question__c</fullName>
    <label>Security Question</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>City Born</fullName><default>false</default><label>What city were you born in?</label></value>
            <value><fullName>First Pet</fullName><default>false</default><label>What was your first pet's name?</label></value>
            <value><fullName>School Name</fullName><default>false</default><label>What was the name of your school?</label></value>
            <value><fullName>Favorite Color</fullName><default>false</default><label>What is your favorite color?</label></value>
            <value><fullName>Mother Maiden</fullName><default>false</default><label>What was your mother's maiden name?</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>